<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:tools="http://schemas.android.com/tools"
android:padding="16dp"
android:background="@drawable/background"
tools:context=".ui.fragment.SettingsFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Location & Language Section side by side -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <!-- Location Section -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="#42000000"
            android:padding="16dp"
            android:elevation="4dp"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_purple"
                android:padding="12dp"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radio_group_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp">

                <RadioButton
                    android:id="@+id/rb_gps"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:padding="8dp"
                    android:text="@string/gps"
                    android:textColor="@color/warm_beach"
                    android:textSize="18dp" />

                <RadioButton
                    android:id="@+id/rb_map"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:padding="8dp"
                    android:text="@string/map"
                    android:textColor="@color/warm_beach"
                    android:textSize="18dp" />
            </RadioGroup>
        </LinearLayout>

        <!-- Language Section -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="#42000000"
            android:padding="16dp"
            android:elevation="4dp"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_purple"
                android:padding="12dp"
                android:text="@string/language"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radio_group_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp">

                <RadioButton
                    android:id="@+id/rb_english"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:padding="8dp"
                    android:text="@string/english"
                    android:textColor="@color/warm_beach"
                    android:textSize="18dp" />

                <RadioButton
                    android:id="@+id/rb_arabic"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:padding="8dp"
                    android:text="@string/arabic"
                    android:textColor="@color/warm_beach"
                    android:textSize="18sp" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <!-- Temperature & Wind Speed Section side by side -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <!-- Temperature Section -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="#42000000"
            android:padding="16dp"
            android:elevation="4dp"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_purple"
                android:padding="12dp"
                android:text="@string/temperature"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radio_group_temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp">

                <RadioButton
                    android:id="@+id/rb_celsius"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:padding="8dp"
                    android:text="@string/celsius"
                    android:textColor="@color/warm_beach"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rb_kelvin"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:padding="8dp"
                    android:text="Kelvin"
                    android:textColor="@color/warm_beach"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rb_fahrenheit"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:padding="8dp"
                    android:text="@string/fahrenheit"
                    android:textColor="@color/warm_beach"
                    android:textSize="18dp" />
            </RadioGroup>
        </LinearLayout>

        <!-- Wind Speed Section -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#42000000"
            android:elevation="4dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_purple"
                android:padding="12dp"
                android:text="@string/windspeed"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radio_group_wind_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp">

                <RadioButton
                    android:id="@+id/rb_meter_sec"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:padding="8dp"
                    android:text="@string/metersec"
                    android:textColor="@color/warm_beach"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rb_mile_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:padding="8dp"
                    android:text="@string/milehour"
                    android:textColor="@color/warm_beach"
                    android:textSize="16sp" />

                <!-- New RadioButton for km/h -->
                <RadioButton
                    android:id="@+id/rb_km_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:padding="8dp"
                    android:text="@string/kmh"
                    android:textColor="@color/warm_beach"
                    android:textSize="16sp" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <!-- Notifications Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#42000000"
        android:padding="16dp"
        android:elevation="4dp"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_purple"
            android:padding="12dp"
            android:text="@string/notifications"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/disabled"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:padding="8dp"
            android:text="@string/enable"
            android:textColor="@color/warm_beach"
            android:textSize="16dp" />

        <RadioButton
            android:id="@+id/enabled"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:padding="8dp"
            android:text="@string/disable"
            android:textColor="@color/warm_beach"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
</ScrollView>