<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:text="Status of Weather"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/img_weather"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:src="@drawable/favorite" />

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="Mon Sep 16, 2024:11"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/txt_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="25°C"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="63sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_temp_range"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="H: 25°C L: 18°C"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:background="@drawable/background2"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/raining" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/windy"

                        />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/humidity"

                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="3dp"
                    android:gravity="center"

                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_rain"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="20%"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/txt_wind"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="12 km/h"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_humidity"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="20%"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/rain"
                        android:textColor="@color/white"
                        android:textSize="14sp" />


                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/wind_speed"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <TextView

                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/humidity"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </LinearLayout>



            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/today"
                android:textColor="@color/dark_yellow"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_height="wrap_content">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/next_7_days"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_marginStart="180dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content">

            </TextView>
        </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/day_recycler_view"
                android:layout_width="match_parent"
                android:clipToPadding="false"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="match_parent">
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>

    </ScrollView>

</FrameLayout>